--- a/notebooks/financial_analysis.ipynb
+++ b/notebooks/financial_analysis.ipynb
@@ -887,6 +887,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Task 2"
+      ],
+      "metadata": {
+        "id": "axVr3iIBXeeQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
